--- a/public/style.css
+++ b/public/style.css
@@ -112,13 +112,15 @@ button:hover {
 
 footer {
     text-align: right;
-    height: 40px;
+    height: 80px;
     padding-right: 20px;
     padding: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     width: 100%;
     position: absolute;
     border-top: 2px black solid;
+    background-color: #b80c09;
+    color: white;
 }
 
 .selection {
@@ -127,4 +129,14 @@ footer {
     /* justify-content: center; */
     align-items: center;
     align-content: left;
+}
+
+.searchList:hover {
+    background-color: pink;
+}
+
+.recipe {
+    border: 2px black solid;
+    height: 100px;
+    width: 100px;
 }
