--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,11 @@
     margin: 0;
 }
 
-.body {
+body {
     display: grid;
     grid-template-rows: 10% 90%;
     /* height: 100vh; */
+    background-color: #2b0000;
 }
 
 .nav {
@@ -17,6 +18,7 @@
     /* flex-direction: column; */
     /* text-align: right; */
     border-bottom: 2px black solid;
+    background-color: white;
 }
 
 .hamburger {
@@ -49,9 +51,13 @@ h1 {
     text-align: center;
 }
 
+h1,
 h2,
-p {
-    font-family: "Raleway", sans-serif;
+p,
+label,
+button {
+    /* font-family: "Raleway", sans-serif; */
+    font-family: "M PLUS 1p", sans-serif;
 }
 .button {
     margin: 20px;
@@ -119,8 +125,10 @@ footer {
     width: 100%;
     position: absolute;
     border-top: 2px black solid;
-    background-color: #b80c09;
-    color: white;
+    background-color: white;
+    /* color: black; */
+    font-family: "Unica One", cursive;
+    font-size: 30px;
 }
 
 .selection {
@@ -128,7 +136,30 @@ footer {
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    align-content: left;
+    /* align-content: left; */
+    border: 2px black solid;
+    margin: 30px;
+    background-color: white;
+}
+
+.ingredients {
+    display: flex;
+}
+.attributes {
+    display: flex;
+    margin: 20px;
+}
+
+.attribute {
+    margin: 5px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+}
+
+.icon {
+    height: 30px;
+    width: 30px;
 }
 
 .searchList:hover {
@@ -136,7 +167,29 @@ footer {
 }
 
 .recipe {
+    /* border: 2px black solid; */
+    box-shadow: 0 2px 2px;
+    background-color: wheat;
+    height: 200px;
+    width: 200px;
+    padding: 5px;
+}
+.resultContainer {
     border: 2px black solid;
+    padding: 20px;
+    margin: 40px;
+}
+.resultCard {
+    border: 2px black solid;
+    height: 150px;
+    width: 600px;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 120px auto auto;
+}
+
+.resultCardimg {
     height: 100px;
     width: 100px;
+    margin: 25px;
 }
