--- a/public/style.css
+++ b/public/style.css
@@ -199,7 +199,7 @@ footer {
     width: 600px;
     margin: 20px;
     display: grid;
-    grid-template-columns: 120px auto auto;
+    grid-template-columns: 120px auto auto auto;
 }
 
 .resultCardimg {
@@ -207,4 +207,23 @@ footer {
     width: 100px;
     margin: 25px;
     background-color: white;
+}
+
+.save {
+    height: 30px;
+    width: 30px;
+    margin: 10px;
+}
+
+/* .notSaved {
+    height: 30px;
+    width: 30px;
+    margin: 10px;
+} */
+
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
 }
