--- a/public/style.css
+++ b/public/style.css
@@ -224,8 +224,9 @@ footer {
 
 .searchField {
     height: 60px;
-    width: 200px;
-    border: 2px black solid;
+    width: 400px;
+    border: 0px;
+    border-bottom: 2px black solid;
     /* border-radius: 15%; */
     font-size: 20px;
 }
@@ -237,14 +238,16 @@ footer {
 
 .attributes {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     margin: 20px;
 }
 
 .attribute {
-    margin: 5px;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    margin: 8px;
+    display: flex;
+    /* grid-template-columns: auto auto;
+    grid-template-rows: auto auto; */
 }
 
 .icon {
@@ -327,4 +330,49 @@ footer {
     flex-direction: column;
     align-items: center;
     width: 500px;
+}
+
+.upload {
+    background-color: white;
+    margin: 40px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.divide {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 30px;
+    /* align-content: center; */
+}
+
+.uploadDetails {
+    display: grid;
+    grid-template-columns: 200px 300px;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 20px;
+    /* margin-right: 30px; */
+    margin-bottom: 20px;
+}
+
+.uploadTags {
+    display: grid;
+    grid-template-columns: 50px 300px;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+}
+
+.margin {
+    margin-top: 10px;
+}
+
+.niceInput {
+    border: 0px;
+    border-bottom: 2px #28262c solid;
+}
+
+.position {
+    left: 40%;
 }
