--- a/public/style.css
+++ b/public/style.css
@@ -437,21 +437,74 @@ footer {
     left: 40%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
+    .wine {
+        font-size: 25px;
+        padding-left: 10px;
+        padding-top: 5px;
+    }
     .halves {
         display: flex;
         flex-direction: column;
         /* height: 100vh; */
     }
 
-    .navSave {
-        height: 50px;
-        width: 50px;
-        margin-bottom: 20px;
-        margin-right: 40px;
+    .nav {
+        width: 100%;
+        padding: 3px;
     }
 
-    .navLinks {
-        height: 200px;
+    .navSave {
+        height: 30px;
+        width: 30px;
+        /* margin-bottom: 20px; */
+        margin-right: 5px;
+    }
+
+    .left {
+        padding-bottom: 20px;
+    }
+
+    .right {
+        /* height: 0px; */
+    }
+
+    .navTest {
+        font-size: 10px;
+        text-align: center;
+        margin: 2px;
+    }
+
+    .selection {
+        display: flex;
+        flex-direction: column;
+        /* grid-template-columns: 50% 50%; */
+        height: 70%;
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* align-content: left; */
+        border: 2px black solid;
+        margin: 60px;
+        background-color: white;
+    }
+
+    .resultContainer {
+        /* border: 2px black solid;
+    background-color: white;
+    padding: 10px;
+    margin: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+        min-height: 50%;
+    }
+    .divide {
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        /* align-content: center; */
     }
 }
